tests/integrationTests/tests/tutorial_09_java_testing/validation/does_not_compile_test02_STDERR.txt
Picked up JAVA_TOOL_OPTIONS: -Xms128m -Xmx256m
./Factorial.java:24: error: cannot find symbol
	    return tailFac(n-1, acc*n);
	           ^
  symbol:   method tailFac(int,int)
  location: class Factorial
1 error
